--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>M.Mbaye — NLP Engineer 💻 </title>
    
-    <link rel="icon" href="/mmnlp-journey/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/mmnlp-journey/assets/favicon-OmCnjMbr.ico" type="image/x-icon" />
     
     <meta name="description" content="NLP Engineer passionate about Text Mining and AI. I explore the intersection of language and technology to build innovative solutions, from text analysis to model training. Portfolio showcasing projects in Named Entity Recognition (NER), Topic Modeling, Sentiment Analysis, Retrieval-Augmented Generation (RAG), Conference Resolution, Information Retrieval (IR), and Information Extraction (IE).">
     
